apps/web/nginx-static-sites/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-sites
spec:
  selector:
    app: nginx-static-sites
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
