apps/web/nginx-static-sites/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: nginx-static-sites
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: nginx-static-sites
          port: 80
